--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dealership</title>
     <!--Link to css-->
-    <link rel="Stylesheet" href="style.css">
+    <link rel="Stylesheet" href="/assets/style.css">
 
     <!-- Box Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -57,32 +57,32 @@
         <div class="cars-container container">
             <!-- Box 1 -->
             <div class="box">
-                <img src="img/car1.jpg" alt="">
+                <img src="/assets/img/car1.jpg" alt="">
                 <h2>Porche</h2>
             </div>
               <!-- Box 2 -->
               <div class="box">
-                <img src="img/car2.jpg" alt="">
+                <img src="/assets/img/car2.jpg" alt="">
                 <h2>Audi</h2>
             </div>
               <!-- Box 3 -->
               <div class="box">
-                <img src="img/car3.jpg" alt="">
+                <img src="/assets/img/car3.jpg" alt="">
                 <h2>Audi</h2>
             </div>
               <!-- Box 4 -->
               <div class="box">
-                <img src="img/car4.jpg" alt="">
+                <img src="/assets/img/car4.jpg" alt="">
                 <h2>Audi</h2>
             </div>
               <!-- Box 5 -->
               <div class="box">
-                <img src="img/car5.jpg" alt="">
+                <img src="/assets/img/car5.jpg" alt="">
                 <h2>Audi</h2>
             </div>
               <!-- Box 6 -->
               <div class="box">
-                <img src="img/car6.jpg" alt="">
+                <img src="/assets/img/car6.jpg" alt="">
                 <h2>Steeda</h2>
             </div>
         </div>
@@ -91,7 +91,7 @@
     <!-- ABOUT -->
     <section class="about container" id="about">
       <div class="about-img">
-        <img src="img/about.png" alt="">
+        <img src="/assets/img/about.png" alt="">
       </div>
         <div class="about-text">
             <span> About Us </span>
@@ -113,7 +113,7 @@
         <div class="parts-container container">
             <!-- Box 1 -->
             <div class="box">
-                <img src="img/part1.png" alt="" >
+                <img src="/assets/img/part1.png" alt="" >
                 <h3> Auto Spare Parts</h3>
                 <span>$120.99</span>
                 <i class='bx bxs-star'>(6 Reviews)</i>
@@ -122,7 +122,7 @@
             </div>
                  <!-- Box 2 -->
                  <div class="box">
-                    <img src="img/part2.png" alt="" >
+                    <img src="/assets/img/part2.png" alt="" >
                     <h3> Auto Spare Parts</h3>
                     <span>$120.99</span>
                     <i class='bx bxs-star'>(6 Reviews)</i>
@@ -131,7 +131,7 @@
                 </div>
                      <!-- Box 3 -->
             <div class="box">
-                <img src="img/part3.png" alt="" >
+                <img src="/assets/img/part3.png" alt="" >
                 <h3> Auto Spare Parts</h3>
                 <span>$120.99</span>
                 <i class='bx bxs-star'>(6 Reviews)</i>
@@ -140,7 +140,7 @@
             </div>
                  <!-- Box 4 -->
                  <div class="box">
-                    <img src="img/part4.png" alt="" >
+                    <img src="/assets/img/part4.png" alt="" >
                     <h3> Auto Spare Parts</h3>
                     <span>$120.99</span>
                     <i class='bx bxs-star'>(6 Reviews)</i>
@@ -149,7 +149,7 @@
                 </div>
                      <!-- Box 5 -->
             <div class="box">
-                <img src="img/part5.png" alt="" >
+                <img src="/assets/img/part5.png" alt="" >
                 <h3> Auto Spare Parts</h3>
                 <span>$120.99</span>
                 <i class='bx bxs-star'>(6 Reviews)</i>
@@ -158,7 +158,7 @@
             </div>
                  <!-- Box 6 -->
                  <div class="box">
-                    <img src="img/part6.png" alt="" >
+                    <img src="/assets/img/part6.png" alt="" >
                     <h3> Auto Spare Parts</h3>
                     <span>$120.99</span>
                     <i class='bx bxs-star'>(6 Reviews)</i>
@@ -178,7 +178,7 @@
         <div class="blog-container container">
             <!-- Box 1 -->
             <div class="box">
-                <img src="img/car1.jpg" alt="">
+                <img src="/assets/img/car1.jpg" alt="">
                 <span>Feb 14 2021</span>
                 <h3>How To Get Perfect Car At Low Prices</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, vitae!</p>
@@ -186,7 +186,7 @@
             </div>
                 <!-- Box 2 -->
                 <div class="box">
-                    <img src="img/car4.jpg" alt="">
+                    <img src="/assets/img/car4.jpg" alt="">
                     <span>Feb 14 2021</span>
                     <h3>How To Get Perfect Car At Low Prices</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, vitae!</p>
@@ -194,7 +194,7 @@
                 </div>
                     <!-- Box 3 -->
             <div class="box">
-                <img src="img/car3.jpg" alt="">
+                <img src="/assets/img/car3.jpg" alt="">
                 <span>Feb 14 2021</span>
                 <h3>How To Get Perfect Car At Low Prices</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, vitae!</p>
@@ -240,6 +240,6 @@
         <p>&#169; CarpoolVenom All Right Reserved </p>
     </div>
   <!-- LINK TO JS -->
-    <script src="script.js"></script>
+    <script src="/assets/script.js"></script>
 </body>
 </html>
