--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dealership</title>
     <!--Link to css-->
-    <link rel="Stylesheet" href="/assets/style.css">
+    <link rel="Stylesheet" href="/assets/css/style.css">
 
     <!-- Box Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -39,7 +39,7 @@
     <!-- HOME -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>We Have Everything <br> Your <span>Car</span> Need</h1>
+            <h1>We Have Everything <br> Your <span>Car</span> Needs</h1>
             <p>Lorem ipsum dolor sit amet consectetur  <br>adipisicing elit. Aut, modi, nisi voluptas fugi,aliquam ?</p>
 
             <!--HOME BUTTON-->
